# ModelTea

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
block/: block_graphics_view.cpp  block_graphics_view.h  block_scene.cpp  block_scene.h  test_block.cpp  test_block.h
blocks/: base_block.cpp  base_block.h  block_io_port.cpp  block_io_port.h  block_object.cpp  block_object.h
icons/: .gitignore  build_icons.py
icons/resources/: windows.rc
lib/mtea-dyn/: CMakeLists.txt
lib/mtea-dyn/include/: block_interface.hpp  block_io_ports.hpp  codegen.hpp  codegen_component.hpp  codegen_generator.hpp  connection.hpp  connection_manager.hpp  data_dictionary.hpp  data_parameter.hpp  data_type.hpp  execution_state.hpp  identifier.hpp  library.hpp  library_model.hpp  library_stdlib.hpp  model.hpp  model_block.hpp  model_exception.hpp  model_manager.hpp  parameter.hpp  value.hpp  value_array.hpp  variable_manager.hpp
lib/mtea-dyn/src/: block_interface.cpp  block_io_ports.cpp  codegen.cpp  codegen_component.cpp  codegen_generator.cpp  connection.cpp  connection_manager.cpp  data_dictionary.cpp  data_parameter.cpp  execution_state.cpp  identifier.cpp  library.cpp  library_model.cpp  library_stdlib.cpp  model.cpp  model_block.cpp  model_exception.cpp  model_manager.cpp  parameter.cpp  value.cpp  value_array.cpp  variable_manager.cpp
lib/sim_math/: CMakeLists.txt
lib/sim_math/src/sim_math/: bus.hpp  codegen_state.hpp  compute_result.hpp  data_types.hpp  parameter.cpp  parameter.hpp  port_signal.hpp  signal.cpp  signal.hpp  sim_bus.hpp  sim_codegen_state.hpp  sim_limiter.hpp  sim_signal.hpp  sim_types.hpp
lib/sim_math/src/sim_math/blocks/: base_block.hpp  block_base.hpp  block_exception.hpp  constant.hpp  limiter.hpp  math_operation.hpp
lib/tmdl/: CMakeLists.txt
lib/tmdl/include/: block_interface.hpp  block_io_ports.hpp  codegen.hpp  codegen_component.hpp  codegen_generator.hpp  connection.hpp  data_parameter.hpp  data_type.hpp  execution_state.hpp  identifier.hpp  library_manager.hpp  library_model.hpp  library_stdlib.hpp  model_block.hpp  parameter.hpp  value.hpp  value_array.hpp  variable_manager.hpp
lib/tmdl/src/: block_io_ports.cpp  codegen.cpp  codegen_component.cpp  codegen_generator.cpp  connection.cpp  data_parameter.cpp  data_type.cpp  identifier.cpp  library_manager.cpp  library_model.cpp  library_stdlib.cpp  model.cpp  model_exception.cpp  parameter.cpp  tmdl.cpp  value.cpp  value_array.cpp  variable_manager.cpp
lib/tmdl/src/tmdl/: block.cpp  block.hpp  block_interface.cpp  block_interface.hpp  codegen.cpp  codegen_component.cpp  codegen_generator.cpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  data_dictionary.cpp  data_parameter.cpp  data_type.cpp  execution_state.cpp  execution_state.hpp  identifier.cpp  io_ports.cpp  io_ports.hpp  library.cpp  library.hpp  library_manager.cpp  library_manager.hpp  library_stdlib.cpp  model.cpp  model.hpp  model_block.cpp  model_block.hpp  model_exception.cpp  model_exception.hpp  model_executor.cpp  model_library.cpp  model_library.hpp  parameter.cpp  parameter.hpp  sim_state.cpp  sim_state.hpp  stdlib.cpp  stdlib.hpp  tmdl.cpp  (+5 more)
lib/tmdl/src/tmdl/blocks/: arithmetic.cpp  arithmetic.hpp  clock.cpp  clock.hpp  common.cpp  common.hpp  constant.cpp  constant.hpp  delay.cpp  delay.hpp  derivative.cpp  derivative.hpp  integrator.cpp  integrator.hpp  io_ports.cpp  io_ports.hpp  limiter.cpp  limiter.hpp  relational.cpp  relational.hpp  switch.cpp  switch.hpp  trig.cpp  trig.hpp  trig2.cpp  trig2.hpp
lib/tmdl/src/tmdl/codegen/: code_generator.hpp  codegen.cpp  codegen.hpp  component.cpp  component.hpp  generator.cpp  generator.hpp
lib/tmdl/src/tmdl/dictionary/: data_dictionary.cpp  data_dictionary.hpp  data_parameter.cpp  data_parameter.hpp  dictionary.cpp
lib/tmdl/src/tmdl/libraries/: libraries.cpp  model_library.cpp  model_library.hpp  stdlib.cpp  stdlib.hpp
lib/tmdl/src/tmdl/stdlib/: clock.cpp  clock.hpp  limiter.cpp  limiter.hpp  stdlib.hpp  tmdl_stdlib.cpp  tmdl_stdlib.hpp  trig.cpp  trig.hpp
lib/tmdl/src/tmdl/util/: identifiers.cpp  identifiers.hpp
lib/tmdl/src/tmdl/values/: data_type.cpp  data_types.cpp  data_types.hpp  identifier.cpp  identifiers.cpp  identifiers.hpp  mod.cpp  parameter.cpp  parameter.hpp  value.cpp  value.hpp  value_array.cpp  value_array.hpp  values.cpp
lib/tmdlstd/: CMakeLists.txt  LICENSE.txt
lib/tmdlstd/src/tmdlstd/: arith.hpp  arith_block.hpp  clock.cpp  clock.hpp  const.hpp  delay.hpp  derivative.hpp  integrator.hpp  limiter.hpp  relational.hpp  tmdlstd.cpp  tmdlstd.hpp  trig.hpp  util.cpp  util.hpp
rcs/: .gitignore
rcs/build_icons/: build_icons.py
rcs/icons/: macos.icns
scenes/: main_window.cpp  main_window.ui
src/: main.cpp
src/blocks/: block_io_port.cpp  block_object.cpp  block_object.h  connecting_line.h  connector_block_object.cpp  connector_block_object.h  connector_object.cpp  connector_object.h  scene_graphics_object.cpp  scene_graphics_object.h
src/dialogs/: block_parameters_dialog.cpp  block_parameters_dialog.h  block_parameters_dialog.ui  block_selector_dialog.cpp  block_selector_dialog.h  block_selector_dialog.ui  connection_parameters_dialog.cpp  connection_parameters_dialog.h  connection_parameters_dialog.ui  model_diagnostics_dialog.cpp  model_diagnostics_dialog.h  model_diagnostics_dialog.ui  model_parameters_dialog.cpp  model_parameters_dialog.h  model_parameters_dialog.ui
src/events/: sim_event.cpp  sim_event.h
src/exceptions/: block_object_exception.h  model_exception.h  teafis_exception.h
src/managers/: executor_manager.cpp  executor_manager.h  window_manager.cpp  window_manager.h
src/models/: plot_variable_selection_model.cpp  plot_variable_selection_model.h
src/ui/: app_icon.cpp  app_window_icon.h  app_window_icon_default.cpp  app_window_icon_macos.cpp  app_window_icon_windows.cpp  window_icon.cpp  (+1 more)
widgets/: block_graphics_view.cpp  block_graphics_view.h  block_scene.h
windows/: main_window.cpp  main_window.h  main_window.ui  main_window_icon.cpp  main_window_icon.h
(+45 files in other folders)
